version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/DataModel/Enums/EXDEulerResolutionDefType.rst.txt
.. vale off



:class:`EXDEulerResolutionDefType`
==================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.DataModel.Enums.EXDEulerResolutionDefType

   Bases: :py:obj:`enum.Enum`


   
   Generic enumeration.

   Derive from this class to define new enumerations.















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: EXDEulerResolutionDefType

Overview
--------

.. tab-set::





   .. tab-item:: Attributes

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~eCellSize`
            - 
          * - :py:attr:`~eComponentCells`
            - 
          * - :py:attr:`~eTotalCells`
            - 








Attribute detail
----------------
.. py:attribute:: eCellSize
   :value: 1


.. py:attribute:: eComponentCells
   :value: 2


.. py:attribute:: eTotalCells
   :value: 0






.. vale on